src/test/ui/shadowed/shadowed-lifetime.stderr
error[E0496]: lifetime name `'a` shadows a lifetime name that is already in scope
  --> $DIR/shadowed-lifetime.rs:6:25
   |
LL | impl<'a> Foo<'a> {
   |      -- first declared here
LL |     fn shadow_in_method<'a>(&'a self) -> &'a isize {
   |                         ^^ lifetime 'a already in scope

error[E0496]: lifetime name `'b` shadows a lifetime name that is already in scope
  --> $DIR/shadowed-lifetime.rs:12:20
   |
LL |     fn shadow_in_type<'b>(&'b self) -> &'b isize {
   |                       -- first declared here
LL |         let x: for<'b> fn(&'b isize) = panic!();
   |                    ^^ lifetime 'b already in scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0496`.
